--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "goit-react-hw-08-phonebook",
+  "name": "phonebook-app",
   "version": "0.1.0",
-  
   "private": true,
-  "homepage": "https://VitiukVV.github.io/goit-react-hw-08-phonebook/",
+  "homepage": "https://VitiukVV.github.io/PhonebookApp/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
